--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,8 +1,25 @@
 server {
+    server_tokens off;
     listen 80;
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
+    }
+    location /api/ {
+        proxy_pass http://web:8000/api/;
+    }
+
+    location /admin/ {
+        proxy_pass http://web:8000/admin/;
+    }
+    location /static/admin/django/ {
+      root /var/html/;
+    }
+    location /static/django/ {
+        root /var/html/;
+    }
+    location /media/django/ {
+        root /var/html/;
     }
     location / {
         root /usr/share/nginx/html;
