--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -1,6 +1,6 @@
 version: '3.8'
 services:
-# это дополнительный файл только с БД, нужен для отладки
+# это дополнительный файл только с БД, нужен для отладки.
 
   db:
     image: postgres:13.0-alpine
