--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -11,9 +11,7 @@ services:
       - "5432:5432"
   
   web:
-    build:
-      context: ../backend
-      dockerfile: Dockerfile
+    image: alenavi/backend:latest
     restart: always
     volumes:
       - static_value:/app/static/django/
