--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,4 +61,4 @@ jobs:
             echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env
             echo DEBUG=${{ secrets.DEBUG }} >> .env
             sudo systemctl stop nginx
-            sudo docker-compose up -d && docker-compose exec -T web python manage.py migrate && docker-compose exec -T web python manage.py collectstatic --no-input
+            sudo docker-compose up --build -d && docker-compose exec -T web python manage.py migrate && docker-compose exec -T web python manage.py collectstatic --no-input
