--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
-      - .env
+      - ../backend/.env
     ports:
       - "5432:5432"
   
@@ -19,13 +19,11 @@ services:
     depends_on:
       - db
     env_file:
-      - .env
+      - ../backend/.env
   
 
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: alenavi/frontend:latest
     volumes:
       - ../frontend/:/app/result_build/
 
