--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
 anyio==3.6.2
 asgiref==3.6.0
+autoflake==2.0.1
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==2.0.12
@@ -10,11 +11,14 @@ defusedxml==0.7.1
 Django==3.2.17
 django-colorfield==0.8.0
 django-cors-headers==3.13.0
+django-environ==0.9.0
 django-filter==2.4.0
 django-templated-mail==1.1.1
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.7.2
 djoser==2.1.0
+docformatter==1.5.1
+fastapi==0.92.0
 gunicorn==20.0.4
 idna==3.4
 importlib-metadata==1.7.0
